{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 20,
  "lineage": "147b2c1c-df70-2d94-7aef-48781f9aeadb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:internet-gateway/igw-017e78c2cbc2434a4",
            "id": "igw-017e78c2cbc2434a4",
            "owner_id": "368276953847",
            "tags": {
              "Name": "acit4640_as2",
              "Project": "acit4640_as2"
            },
            "tags_all": {
              "Name": "acit4640_as2",
              "Project": "acit4640_as2"
            },
            "vpc_id": "vpc-090c5727aaf7090c6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:route-table/rtb-0c94ba5f54259032b",
            "id": "rtb-0c94ba5f54259032b",
            "owner_id": "368276953847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-017e78c2cbc2434a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acit4640_as2",
              "Project": "acit4640_as2"
            },
            "tags_all": {
              "Name": "acit4640_as2",
              "Project": "acit4640_as2"
            },
            "timeouts": null,
            "vpc_id": "vpc-090c5727aaf7090c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4e3186a6fa7c3b1",
            "route_table_id": "rtb-0c94ba5f54259032b",
            "subnet_id": "subnet-02914b10cd94e72b2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034d0397e5154c65e",
            "route_table_id": "rtb-0c94ba5f54259032b",
            "subnet_id": "subnet-07d513401245ac07a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group/sg-052d78afbc5d10831",
            "description": "Allows ssh, web, and intra-vpc ingress access and all egress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052d78afbc5d10831",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http from everywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh from everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_count_dyn_inv",
            "name_prefix": "",
            "owner_id": "368276953847",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acit4640_as2_sg_count_dyn_inv",
              "Project": "acit4640_as2"
            },
            "tags_all": {
              "Name": "acit4640_as2_sg_count_dyn_inv",
              "Project": "acit4640_as2"
            },
            "timeouts": null,
            "vpc_id": "vpc-090c5727aaf7090c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:subnet/subnet-02914b10cd94e72b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02914b10cd94e72b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "368276953847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "acit4640_as2_us-west-2a",
              "Project": "acit4640_as2"
            },
            "tags_all": {
              "Name": "acit4640_as2_us-west-2a",
              "Project": "acit4640_as2"
            },
            "vpc_id": "vpc-090c5727aaf7090c6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:subnet/subnet-07d513401245ac07a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d513401245ac07a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "368276953847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "acit4640_as2_us-west-2b",
              "Project": "acit4640_as2"
            },
            "tags_all": {
              "Name": "acit4640_as2_us-west-2b",
              "Project": "acit4640_as2"
            },
            "vpc_id": "vpc-090c5727aaf7090c6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:vpc/vpc-090c5727aaf7090c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6f6696621e99e41",
            "default_route_table_id": "rtb-0314e6196cb63e253",
            "default_security_group_id": "sg-0785378f27d850b01",
            "dhcp_options_id": "dopt-00be7c90a52b57653",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090c5727aaf7090c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0314e6196cb63e253",
            "owner_id": "368276953847",
            "tags_all": {
              "Project": "acit4640_as2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_all_egress",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group-rule/sgr-06207bccffdd14028",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allow all egress traffic",
            "from_port": null,
            "id": "sgr-06207bccffdd14028",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d78afbc5d10831",
            "security_group_rule_id": "sgr-06207bccffdd14028",
            "tags": {
              "Name": "acit4640_as2_allow_all_egress",
              "Project": "acit4640_as2"
            },
            "tags_all": {
              "Name": "acit4640_as2_allow_all_egress",
              "Project": "acit4640_as2"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group-rule/sgr-0922a74f5a73c1e7b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allow http from everywhere",
            "from_port": 80,
            "id": "sgr-0922a74f5a73c1e7b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d78afbc5d10831",
            "security_group_rule_id": "sgr-0922a74f5a73c1e7b",
            "tags": {
              "Name": "allow http",
              "Project": "acit4640_as2"
            },
            "tags_all": {
              "Name": "allow http",
              "Project": "acit4640_as2"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "allow ssh",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:368276953847:security-group-rule/sgr-08f9f8818b33d48b6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allow ssh from everywhere",
            "from_port": 22,
            "id": "sgr-08f9f8818b33d48b6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052d78afbc5d10831",
            "security_group_rule_id": "sgr-08f9f8818b33d48b6",
            "tags": {
              "Name": "allow ssh",
              "Project": "acit4640_as2"
            },
            "tags_all": {
              "Name": "allow ssh",
              "Project": "acit4640_as2"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03839f1dba75bb628",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-0b24c13013273ddec",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b24c13013273ddec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "acit4640_as2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-095bbc27a7b4bbf44",
            "private_dns": "ip-10-0-1-48.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-34-212-23-31.us-west-2.compute.amazonaws.com",
            "public_ip": "34.212.23.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "Project": "acit4640_as2"
                },
                "throughput": 0,
                "volume_id": "vol-02a006cd9adfe3d5c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02914b10cd94e72b2",
            "tags": {
              "N": "0",
              "Name": "bun",
              "Project": "acit4640_as2"
            },
            "tags_all": {
              "N": "0",
              "Name": "bun",
              "Project": "acit4640_as2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052d78afbc5d10831"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03839f1dba75bb628",
            "arn": "arn:aws:ec2:us-west-2:368276953847:instance/i-097ae0714c9e971b4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097ae0714c9e971b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "acit4640_as2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-019874eb405c10c0c",
            "private_dns": "ip-10-0-2-236.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.236",
            "public_dns": "ec2-35-165-114-163.us-west-2.compute.amazonaws.com",
            "public_ip": "35.165.114.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "Project": "acit4640_as2"
                },
                "throughput": 0,
                "volume_id": "vol-0ee8a0723261498f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d513401245ac07a",
            "tags": {
              "N": "1",
              "Name": "bun",
              "Project": "acit4640_as2"
            },
            "tags_all": {
              "N": "1",
              "Name": "bun",
              "Project": "acit4640_as2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052d78afbc5d10831"
            ]
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}